[tool.poetry]
name = "github-token-client"
version = "1.0.8"
description = "Library and CLI tool for creating GitHub project tokens"
authors = ["smheidrich <smheidrich@weltenfunktion.de>"]
readme = "README.md"
homepage = "https://smheidrich.gitlab.io/github-token-client/"
repository = "https://gitlab.com/smheidrich/github-token-client"
documentation = "https://smheidrich.gitlab.io/github-token-client/"

[tool.poetry.scripts]
github-token-client = 'github_token_client.cli:cli_main'

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.29"
keyring = "^23.13.1"
typer = "^0.7.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.10.0"
isort = "^5.10.1"
types-python-dateutil = "^2.8.19.5"

[tool.poetry.group.doc.dependencies]
sphinx = "^6.1.3"
sphinx-autoapi = "^2.0.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
