[tool.poetry]
name = "github-fine-grained-token-client"
version = "1.0.5"
description = "Library and CLI tool for creating fine-grained GitHub tokens"
authors = ["smheidrich <smheidrich@weltenfunktion.de>"]
readme = "README.md"
homepage = "https://smheidrich.gitlab.io/github-fine-grained-token-client/"
repository = "https://gitlab.com/smheidrich/github-fine-grained-token-client"
documentation = "https://smheidrich.gitlab.io/github-fine-grained-token-client/"

[tool.poetry.scripts]
github-fine-grained-token-client = 'github_fine_grained_token_client.cli:cli_main'

[tool.poetry.dependencies]
python = "^3.10"
keyring = { version = "^23.13.1", optional = true }
typer = { version = "^0.7.0", optional = true }
python-dateutil = "^2.8.2"
dateparser = "^1.1.6"
beautifulsoup4 = "^4.11.1"
aiohttp = {extras = ["all"], version = "^3.8.3"}
yachalk = {version = "^0.1.5", optional = true}
enum-properties = "^1.3.3"

[tool.poetry.extras]
all = ["typer", "keyring", "yachalk"]
cli = ["typer", "keyring", "yachalk"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.10.0"
isort = "^5.10.1"
types-python-dateutil = "^2.8.19.5"
types-dateparser = "^1.1.4.5"
pytest-aiohttp = "^1.0.4"
types-beautifulsoup4 = "^4.11.6.7"

[tool.poetry.group.doc.dependencies]
sphinx = "^6.1.3"
sphinx-autoapi = "^2.0.0"
enum-tools = {extras = ["sphinx"], version = "^0.9.0.post1"}
insipid-sphinx-theme = "^0.4.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
